--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "jsx": "preserve",
     "incremental": true,
     "noUncheckedIndexedAccess": true,
+    "noImplicitThis": true,
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
