--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/server": "^11.10.0",
     "@hookform/resolvers": "^2.9.11",
     "@mantine/core": "^6.0.1",
+    "@mantine/dates": "^6.0.5",
     "@mantine/hooks": "^6.0.1",
     "@mantine/next": "^6.0.1",
     "@mantine/notifications": "^6.0.2",
+    "@mantine/nprogress": "^6.0.5",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
@@ -26,6 +28,7 @@
     "@trpc/server": "^10.9.0",
     "bcrypt": "^5.1.0",
     "cookies-next": "^2.1.1",
+    "date-fns": "^2.29.3",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
